# crafty

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  arthur_notes.md  benchmark_map.json  important_conventions.md
.github/ISSUE_TEMPLATE/: bug_report.md
bins/crafty-multiplayer/: Cargo.toml
bins/crafty-multiplayer/src/: main.rs
bins/crafty-server/: Cargo.toml
bins/crafty-server/src/: main.rs
bins/crafty-single-player/: Cargo.toml
bins/crafty-single-player/src/: main.rs
crafty-libs/graphics/: Cargo.toml
crafty-libs/graphics-glium/: Cargo.toml
crafty-libs/graphics-glium/src/: lib.rs  runtime.rs
crafty-libs/graphics-glium/src/vertices/: mod.rs  rectangle.rs
crafty-libs/graphics-wgpu/: Cargo.toml
crafty-libs/graphics-wgpu/src/: conversions.rs  vertices.rs
crafty-libs/graphics/src/: lib.rs  renderer.rs
crafty-libs/graphics/src/core/: cube.rs  font.rs  health_bar.rs  hud_renderer.rs  inventory_menu.rs  inventory_slot.rs  items_bar.rs  menu_debug.rs  menu_help.rs  rectangle.rs  string_rect.rs  texture.rs
crafty-libs/graphics/src/player/: fps.rs  world_renderer.rs
crafty-libs/model/: Cargo.toml
crafty-libs/model/src/: args.rs  lib.rs
crafty-libs/model/src/collision/: aabb.rs  collidable.rs
crafty-libs/model/src/entity/: chaser.rs  entity.rs  entity_manager.rs  humanoid.rs  monster.rs  walker_in_circle.rs
crafty-libs/model/src/game/: actions.rs  crafting.rs  input.rs  player.rs  player_items.rs
crafty-libs/model/src/primitives/: matrix.rs  position.rs
crafty-libs/model/src/server/: game_server.rs  monster_manager.rs  server_state.rs  server_update.rs
crafty-libs/model/src/world/: chunk.rs  cube.rs  cube_instance.rs  cubes_to_draw.rs  world.rs  world_serializer.rs
crafty-libs/model/src/world/generation/: biome.rs  perlin.rs  world_generator.rs
crafty-libs/network/: Cargo.toml
crafty-libs/network/src/: lib.rs  message_to_server.rs  proxy.rs  single_player_proxy.rs  tcp_proxy.rs
crafty-libs/primitives/: Cargo.toml
crafty-libs/primitives/src/: camera.rs  color.rs  font.rs  lib.rs  matrix.rs  position.rs  render_data.rs
crafty-libs/primitives/src/opengl/: cube_instance.rs  entity.rs  rectangle.rs
crafty-multiplayer/: Cargo.toml
crafty-multiplayer/src/: main.rs
crafty-server/: Cargo.toml
crafty-server/src/: main.rs
crafty-single-player/: Cargo.toml
crafty-single-player/src/: main.rs
doc/: 3D_world.md  ROADMAP.md  arthur_notes.md  opengl_architecture.md  wgpu_migration_guidelines.md
libs/graphics/: Cargo.toml
libs/graphics-glium/: Cargo.toml
libs/graphics-glium/src/: lib.rs  runtime.rs  texture.rs
libs/graphics-glium/src/vertices/: cube.rs  cube_instance.rs  entity.rs  rectangle.rs
libs/graphics-wgpu/: Cargo.toml
libs/graphics-wgpu/src/: lib.rs  runtime.rs  shaders.rs  texture.rs  vertices.rs
libs/graphics/src/: lib.rs  renderer.rs
libs/graphics/src/core/: entity.rs  health_bar.rs  hud_renderer.rs  inventory_event.rs  inventory_menu.rs  inventory_slot.rs  items_bar.rs  string_rect.rs
libs/graphics/src/player/: fps.rs  world_renderer.rs
libs/model/: Cargo.toml
libs/model/src/: args.rs  lib.rs
libs/model/src/collision/: collidable.rs
libs/model/src/entity/: entity.rs  entity_manager.rs  monster.rs  walker_in_circle.rs
libs/model/src/game/: actions.rs  player.rs  player_items.rs
libs/model/src/server/: game_server.rs  world_dispatcher.rs
libs/model/src/world/: block_kind.rs  chunk.rs  world.rs
libs/model/src/world/generation/: biome.rs  biomes_def.rs  world_generator.rs
libs/network/: Cargo.toml
libs/network/src/: lib.rs  proxy.rs  single_player_proxy.rs  tcp_message_encoding.rs  tcp_proxy.rs  tcp_server.rs
libs/primitives/: Cargo.toml
libs/primitives/src/: color.rs  face.rs  lib.rs  math.rs  matrix.rs  vector.rs
scripts/: test_biome.ipynb  test_world_gen.ipynb
src/: aabb.rs  actions.rs  args.rs  attack.rs  block_kind.rs  camera.rs  chunk.rs  collidable.rs  crafting.rs  cube.rs  cubes_to_draw.rs  entity.rs  fps.rs  game_server.rs  graphics.rs  gravity.rs  health.rs  humanoid.rs  input.rs  items_bar.rs  lib.rs  main.rs  main_client.rs  main_server.rs  math.rs  network.rs  notes-johan.org  player.rs  player_items.rs  primitives.rs  proxy.rs  server.rs  server_update.rs  single_player_proxy.rs  tcp_client.rs  tcp_protocol.rs  tcp_proxy.rs  tcp_server.rs  texture.rs  vector.rs  (+5 more)
src/entity/: chaser.rs  entity.rs  entity_manager.rs  humanoid.rs  monster.rs  walker_in_circle.rs
src/graphics/: color.rs  cube.rs  entity.rs  font.rs  health_bar.rs  hud_manager.rs  hud_renderer.rs  inventory_event.rs  inventory_menu.rs  inventory_slot.rs  inventory_space.rs  items_bar.rs  menu.rs  menu_debug.rs  menu_help.rs  rectangle.rs  string_rect.rs  tile.rs  update_status.rs
src/network/: message_to_server.rs  proxy.rs  server_update.rs  single_player_proxy.rs  tcp_message_encoding.rs  tcp_proxy.rs  tcp_server.rs
src/primitives/: face.rs  math.rs  matrix.rs  position.rs  vector.rs
src/server/: entity_server.rs  game_server.rs  monster_manager.rs  server_state.rs  world_dispatcher.rs
src/world_generation/: biome.rs  biomes_def.rs  perlin.rs  rng_from_seed.rs  tree_gen.rs  world_generator.rs
