[package]
name = "crafty"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crafty"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/tcp_server.rs"

[[bin]]
name = "client"
path = "src/tcp_client.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# OpenGL related
glium = "0.34"
winit = "0.29"
image = "0.24"

# Iterate over the variants of an enum
strum = { version = "0.26", features = ["derive"] }

# A double-ended queue with an upper bound on its length.
bounded-vec-deque = "0.1.1"

# For serializing and de-serializing data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8.5", features = ["small_rng"] }
