[workspace]
resolver = "2"

members = [
    "bins/*",
    "libs/*"
]

# Enable link-time optimization, only in release mode.
[profile.release]
lto = true

[workspace.dependencies]
model = { path = "libs/model" }
network = { path = "libs/network" }
graphics = { path = "libs/graphics" }
graphics_wgpu = { path = "libs/graphics-wgpu" }
primitives = { path = "libs/primitives" }

# Our 1st frontend implementation was with `glium`.
# The code is still available, but not anymore part of the compiled workspace.
# Uncomment this line if you want the `glium` frontend
#graphics_glium = { path = "./crafty-libs/graphics-glium" }

image = "0.24"
strum = { version = "0.26", features = ["derive"] }
bounded-vec-deque = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8.5", features = ["small_rng"] }
clap = { version = "4.5.17", features = ["derive"] }
