[package]
name = "crafty-multiplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { workspace = true }
network = { workspace = true }
graphics = { workspace = true }
graphics_wgpu = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[[bin]]
name = "crafty-multi"
path = "src/main.rs"
