[package]
name = "Client"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { workspace = true }
network = { workspace = true }
graphics = { workspace = true }
graphics_wgpu = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[[bin]]
name = "crafty"
path = "src/main.rs"
