[package]
name = "graphics_wgpu"
version = "0.1.0"
edition = "2021"

[lib]
name = "graphics_wgpu"
path = "src/lib.rs"

[dependencies]
wgpu = "0.20"
pollster = "0.3"
graphics = { workspace = true }
primitives = { workspace = true }
image = { workspace = true }
model = { workspace = true }
winit = { workspace = true }
bytemuck = { version = "1.14", features = ["derive"] }
