[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[lib]
name = "graphics"
path = "src/lib.rs"

[dependencies]
glium = { workspace = true }
winit = { workspace = true }

model = { workspace = true }
network = { workspace = true }
image = { workspace = true }
bounded-vec-deque = { workspace = true }