[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[lib]
name = "graphics"
path = "src/lib.rs"

[dependencies]
primitives = { workspace = true }
model = { workspace = true }
network = { workspace = true }
bounded-vec-deque = { workspace = true }
tracing = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
