[package]
name = "model"
version = "0.1.0"
edition = "2021"

[lib]
name = "model"
path = "src/lib.rs"

[dependencies]
rand = {workspace = true }
serde = {workspace = true }
serde_json = {workspace = true }
strum = {workspace = true }
clap = {workspace = true }
primitives = {workspace = true }
tracing = { workspace = true }
